# ppi_dai_PALOMINOs

./: .env  .gitignore  Dockerfile  Main.py  README.md  _secret_auth_.json  db.sqlite3  fly.toml  informacion.py  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.sh  tailwind.config.js
app/: asignacion_optima_pedidos.py  asignar_pedidos.py  data.py  formulario_combustible.py  formulario_pedidos.py  formulario_pedidos_entregados.py  optimizar_pedidos.py  visualizar_pedidos.py
app/bdd/: geocode_pedidos.csv  pedidos.csv  shapes.dbf  vehiculos.csv
app/data/: acciones_pedidos_completados.csv  pedidos.csv  shapes.shp  (+3 more)
bdd/: acciones_conductor_combustible.csv  acciones_conductor_pedidos.csv  conductores.csv  geocode_pedidos.csv  pedidos.csv  vehiculos.csv
consumo_gasolina/: apps.py  courier.py  models.py  views.py
flutasapp/: asgi.py  forms.py  settings.py  settings2.py  urls.py  wsgi.py
login_auth/: __init__.py  utils.py  widgets.py
migraciones/: crear_tablas.py  crear_usuario_demo.py  flutas_db_create.sql  migrar_acc_cond_combustible.py  migrar_acc_cond_pedidos.py  migrar_conductores.py  migrar_pedidos.py  migrar_vehiculos.py
pages/: 1_📦_Visualizar_Pedidos.py  2_📄_Registrar_pedidos.py  3_🧑_Mi_cuenta.py  asignar_pedidos.py  formulario_combustible.py  formulario_pedidos.py  formulario_pedidos_entregados.py  graficar.py  login.py  obtener_estadisticas.py  visualizar_pedidos.py
utils/: analyze_vehicles.py  calculate_cost.py  draw_graphs.py  geo_utils.py  obtener_estadisticas.py  obtener_graficos.py  search_vehicle.py  usuario.py
(+31 files in other folders)
