[tool.poetry]
name = "flutas"
version = "0.1.0"
description = "An app to know more about your vehicles and his routes. For enterprises and individuals."
authors = ["spalominor <spalominor@unal.edu.co>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.6"
pandas = "^2.2.2"
scipy = "^1.13.0"
numpy = "^1.26.4"
geopandas = "^0.14.4"
matplotlib = "^3.9.0"
django-matplotlib = "^0.1"
geopy = "^2.4.1"
trycourier = "^6.0.5"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
